# memoryshare

./: .gitignore  Cargo.toml  README.md  README_ZH.md  bench.ts  child.ts  index.d.ts  index.js  main.js  package.json  pnpm-lock.yaml  test.ts
.github/workflows/: CI.yml
npm/darwin-arm64/: package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-ia32-msvc/: package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: build.js
src/: lib.rs
