[package]
edition = "2021"
name = "memoryshare"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayref = "0.3.7"
lazy_static = "1.4.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
shared_memory="^0.12.4"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true

[profile.dev]
# rustflags = ["-A dead_code"]